--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 # configure the mongoDB client for a single instance on localhost
 quarkus.mongodb.connection-string = mongodb://localhost:27017
+
+# mandatory if you don't specify the name of the database using @MongoEntity
+quarkus.mongodb.database = measure-shelter
