--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
       <artifactId>quarkus-arc</artifactId>
     </dependency>
     <dependency>
+    	<groupId>io.quarkus</groupId>
+    	<artifactId>quarkus-hibernate-validator</artifactId>
+	</dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy</artifactId>
     </dependency>
