refactor: delete archives and modified application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,5 @@
 # configure the mongoDB client for a single instance on localhost
-# quarkus.mongodb.connection-string = mongodb://localhost:27017
-quarkus.mongodb.connection-string = mongodb://mongodb:27017
-quarkus.mongodb.cluster.connection-string = mongodb://mongo1:27017,mongo2:27017
+# quarkus.mongodb.connection-string = mongodb://mongodb:27017
 
 # mandatory if you don't specify the name of the database using @MongoEntity
 quarkus.mongodb.database = measure-shelter
-
-
-bucket.name = agrotech-measure-shelter
-quarkus.s3.aws.region = us-east-1
-quarkus.s3.aws.credentials.type = static
-quarkus.s3.aws.credentials.static-provider.access-key-id = AKIARE77DB5PTWLHIDWA
-quarkus.s3.aws.credentials.static-provider.secret-access-key = 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
