--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 quarkus.mongodb.connection-string = mongodb://mongodb:27017
 quarkus.mongodb.database = measure-shelter
-
+quarkus.http.port = ${PORT:8080}
 quarkus.http.body.uploads-directory = agrotech-measure-shelter/resources/uploads/
