chore: add atlas endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.mongodb.connection-string = mongodb://mongodb:27017
+quarkus.mongodb.connection-string = mongodb+srv://unamednada:Xe7Mu2uEfXGp48t@webscraping.vmz95sc.mongodb.net/?retryWrites=true&w=majority
 quarkus.mongodb.database = measure-shelter
 quarkus.http.port = ${PORT:8080}
 quarkus.http.body.uploads-directory = agrotech-measure-shelter/resources/uploads/
