--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ quarkus.mongodb.connection-string = mongodb+srv://unamednada:Xe7Mu2uEfXGp48t@web
 quarkus.mongodb.database = measure-shelter
 quarkus.http.port = ${PORT:8080}
 quarkus.http.body.uploads-directory = agrotech-measure-shelter/resources/uploads/
+quarkus.http.cors=true
